[gd_scene load_steps=2 format=3 uid="uid://crc8cnukweya5"]

[ext_resource type="Script" path="res://ui/menu_rules.gd" id="1_abe1w"]

[node name="MenuRules" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_abe1w")

[node name="label_score_txt" type="Label" parent="."]
layout_mode = 2
offset_left = 341.0
offset_top = 94.0
offset_right = 351.0
offset_bottom = 117.0
text = "0
"

[node name="label_nbcapsules_txt" type="Label" parent="."]
layout_mode = 2
offset_left = 341.0
offset_top = 47.0
offset_right = 351.0
offset_bottom = 70.0
text = "0
"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 25.0
offset_right = 335.0
offset_bottom = 115.0

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="hbox_players" type="HBoxContainer" parent="VBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="label_nbcapsules" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Nombre de capsules"

[node name="slider_nbcapsules" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 1.0
tick_count = 10

[node name="label_score" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Score Ã  atteindre"

[node name="slider_score" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
min_value = 1.0
max_value = 20.0
value = 1.0
tick_count = 20
ticks_on_borders = true

[connection signal="value_changed" from="VBoxContainer/slider_nbcapsules" to="." method="_on_slider_nbcapsules_value_changed"]
[connection signal="value_changed" from="VBoxContainer/slider_score" to="." method="_on_slider_score_value_changed"]
